# libvx

./: .gitignore  CMakeLists.txt  README.md
example/: main.c  project.spank
include/: libvx.h
pkg-config/: libvx.pc
spank/: project.spank
src/: libvx.c
test/: main.c  project.spank
